--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,21 +5,59 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    margin: 0 7.5px 15px;
-    background-position: center;
-    background-size: cover;
+    // border: 1px solid transparent;
+    margin: 0 20px 25px;
+    overflow: hidden;
+    //font-family: 'Italiana', serif;
+    // font-family: 'Montserrat', sans-serif;
+    font-family: 'Yeseva One', cursive;
+    transition: all 0.5s ease;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+
+    // -webkit-filter: grayscale(100%);
+    // filter: grayscale(100%);
+
+    &:hover{
+      cursor: pointer;
+      -webkit-border-radius: 0px 20px 0px 20px;
+      -moz-border-radius: 0px 20px 0px 20px;
+      border-radius: 0px 20px 0px 20px;
+      transition: all 0.5s ease;
+      -webkit-box-shadow: -10px 0px 13px -7px #333, 10px 0px 13px -7px #333, 5px 5px 15px 5px rgba(0,0,0,0); 
+      box-shadow: -10px 0px 13px -7px #333, 10px 0px 13px -7px #333, 5px 5px 15px 5px rgba(0,0,0,0);
+      & .background-image{
+        transform: scale(1.1);
+        transition: transform 0.5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+
+      & .content{
+        opacity: 1;
+        transition: opacity .25s ease-in-out;
+        -moz-transition: opacity .25s ease-in-out;
+        -webkit-transition: opacity .25s ease-in-out;
+      }
+    }
+
 
     &.large{
       height: 380px;
     }
 
     &:first-child {
-      margin-right: 7.5px;
+      margin-right: 20px;
     }
 
     &:last-child {
-      margin-left: 7.5px;
+      margin-left: 20px;
+    }
+
+    .background-image{
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+      transition: all 0.5s ease;
     }
 
     .content {
@@ -30,6 +68,11 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: white;
+      opacity: 0.7;
+      text-transform: uppercase;
+      position: absolute;
+
 
       .title {
         font-weight: bold;
@@ -39,8 +82,8 @@
       }
 
       .subtitle {
-        font-weight: lighter;
         font-size: 16px;
+        font-family: 'Montserrat', sans-serif;
       }
     }
   }
