--- a/src/pages/homepage/homepage.style.scss
+++ b/src/pages/homepage/homepage.style.scss
@@ -4,3 +4,9 @@
     align-items: center;
     padding: 20px 80px;
   }
+
+  @media all and (max-width: 767px){
+    .homepage {
+      padding: 20px 20px;
+    }
+  }
