--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -87,3 +87,24 @@
       }
     }
   }
+
+
+  @media all and (max-width: 1240px){
+    .medium-large{
+      height: 380px;
+    }
+  }
+
+  @media all and (max-width: 767px){
+    .menu-item {
+      min-width: 100%;
+      margin: 0px 0px 20px;
+      &:first-child {
+        margin-right: 0px;
+      }
+
+      &:last-child {
+        margin-left: 0px;
+      }
+    }
+  }
